# armbrust

./: .gitignore  Cargo.toml  Makefile  README.md  layout.ld  todo.txt
.cargo/: config
c-hello/: Makefile
fixray/: Cargo.toml
fixray/examples/: ansi.rs
fixray/src/: fp.rs  geom.rs  lib.rs  scene.rs  v.rs
src/: fixpoint.rs  geom.rs  io.rs  main.rs  mandelbrot.rs  math.rs  stm32f030r8.rs  vga.rs
