[package]
name = "arm-test"
version = "0.1.0"
authors = [ "Risto Saarelma <risto.saarelma@iki.fi>" ]
license = "MIT OR Apache-2.0"

[profile.release]
lto = true

[dependencies]
compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins", features = ["mem"] }
fixray = { path = "fixray" }
